Thu Jan 27 15:23:59 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* Component#add_decoration returns now self. Example where this is
	  useful:

	    app = Wee::Utils.app_for {
	      HelloWorld.new.add_decoration(Wee::PageDecoration.new("Hello World"))
	    }
	  
	* add non-Rubygems way to install Wee: install.rb

--------------------------------------------------------------------
TAGGED 0.5.0
--------------------------------------------------------------------

Wed Jan 26 20:22:55 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* Raised version up to 0.5.0 (nearing a release)

	* Fixed test cases.

Wed Jan 26 18:19:39 CET 2005	Michael Neumann	<mneumann@ntecs.de>

	* updated docs

	* made Component#call's marshallable by using an object of class
	  Wee::Component::OnAnswer instead of a Proc.  

	* Moved all continuation-dependent code into directory
	  wee/continuation. By default Wee uses no continuations, you have to
	  require 'wee/continuation' to enable them.

Wed Jan 26 13:51:22 CET 2005	Michael Neumann	<mneumann@ntecs.de>

	* If you pass nil to an attribute method of a Brush, e.g.

	    r.table_data.width(nil)

	  This will remove the 'width' attribute from the tag.
	
	* Method HtmlCanvas#javascript added:

	    # external javascript resource
	    r.javascript.src('/test.js') 

	    # internal javascript 
	    r.javascript.with('function js() { ... }')

	* Method Presenter.uses_property added. Used to declare required
	  properties. This has actually no effect. It's sole purpose is to 
	  describe the dependencies.

NO DATE AVAILABLE		Michael Neumann <mneumann@ntecs.de>

	* Enable Socket.do_not_reverse_lookup in WEBrickAdaptor by default, as
	  this has been the reason for much slowliness

	* Method Component#add_child returns the child so that the following
	  code becomes possible:

	    @pager = add_child Pager.new(...)

	* Added experimental property system.

	* Added methods GenericTagBrush#onclick_callback, HtmlCanvas#link_css,
	  lots of refactoring