@@ -1,0 +1,3 @@
+class OgApplication < Wee::Application
+  attr_accessor :db
+end
